--- a/decorators.html
+++ b/decorators.html
@@ -400,7 +400,7 @@ emu-example pre {
       <h1>Member Descriptors</h1>
       <p>A <dfn>member descriptor</dfn> describes a member of a class or object literal and has the following shape:</p>
       <pre><code class=typescript>
-        interface MemberDesciptor {
+        interface MemberDescriptor {
           kind: "property"
           key: string,
           isStatic: boolean,
@@ -414,7 +414,7 @@ emu-example pre {
       <h1>Class Descriptors</h1>
       <p>A <dfn>class descriptor</dfn> describes a class and has the following shape:</p>
       <pre><code class=typescript>
-        interface ClassDesciptor {
+        interface ClassDescriptor {
           kind: "class",
           constructor: Function,
           heritage: Object | null,
